1.20.1 port (c5): mixins, entities, internals, mod init, spell_infinity restore
- Registration seam: idempotent SpellEngineMod.registerAttributes/StatusEffects/
  Particles/Sounds/Enchantments/EntityTypes/Criteria/SpellBinding + attributesToAttach();
  SpellEngineAttributes / Effects / SpellEngineParticles / SpellEngineSounds idempotent.
- spell_infinity restored as a Java enchantment (SpellInfinityEnchantment +
  SpellEngineEnchantments holder w/ TinyConfig enchantments.json); Ammo checks
  EnchantmentHelper.getLevel(...); staff permits via SpellPower EnchantmentRestriction.
- Attribute modifiers UUID-keyed via ModifierDefinitions.uuid/name (Melee, SummonedEntity,
  Effects); status-effect APIs keyed by raw StatusEffect (InstantCast, Protection,
  StatusEffectClassification, KnockbackImmunity, EntityActionsAllowed).
- Entities: initDataTracker() + startTracking; SummonedEntity getDimensions/playSound/
  isImmuneToExplosion 1.20.1 shapes; no GENERIC_SCALE (EntityScale helper).
- Arrows: ArrowHelper self-contained 1.20.1 shoot pipeline; BowItemMixin + CrossbowItemMixin
  replace RangedWeaponItemMixin/RangedWeaponQuiverMixin (RangedWeaponAccessor deleted).
- Mixins retargeted: PoisonEffectMixin -> StatusEffect, StatusEffect.onRemoved 3-arg,
  loot accessors to 1.20.1 fields (+ LootPool / number-provider accessors),
  EnchantedItemCriterionMixin over EnchantmentHelper.get(stack); LootTableBuilderAccessor deleted.
- Criteria as 1.20.1 JSON AbstractCriterion; ParticleGroupType on ParticleType(boolean, Factory);
  ExternalSpellSchools resolves RWA attributes by registry id (no RWA class refs, Forge-safe);
  Identifier.of -> new Identifier; Java-21 list calls -> 17.